lib/TurtleParser.js
// $ANTLR 3.3 Nov 30, 2010 12:50:56 Turtle.g 2013-01-29 16:19:23

var TurtleParser = function(input, state) {
    if (!state) {
        state = new org.antlr.runtime.RecognizerSharedState();
    }

    (function(){


          /**
          * 
          * Contains a reference to the root of the generated parsetree.
          * @public
          */
          this.parseTree;

          /**
          *
          * Contains at any time a reference to the
          * current rule node.
          * @private
          */
          this.currentNode;


          /**
          * Loads the vocabulary for the prefix. This only happens, 
          * if the vocabulary is not already present in the cache.
          *
          * @private
          */
          this.loadVocabulary = function(prefix, uri) {
            prefix = prefix.substr(0, prefix.length - 1);
            uri = uri.substr(0, uri.length - 1);
            uri = uri.substr(1);

            // Test the cache, if a vocabulary is present
            if(this.vocabCache.miss(prefix)) {
              this.vocabCache.addVocab(prefix, uri);
              var worker = new Worker("leo/httpTurtleProxyAdapter.js");
              var th = this;
              // Initiate communication with the worker
              worker.addEventListener("message", function(e) {
                var result = e.data.result;
                console.debug("results: "+result.length);
                th.vocabCache.addTriples(result);
              });
              worker.postMessage({
                cmd: "adapt",
                uri: uri
              });
            }
          }



          /**
          *
          *  Save a reference to the overwritten version of 'match'
          *  @private
          */
          this.matchOriginal = this.match;

          /**
          *
          * Overwrite 'match' in order to generate a parse tree node 
          * for every token the parser encounters.
          * @private
          */
          this.match = function(input, ttype, follow){
            var node = leo.ir.createTokenNode(input.LT(1)); 
            this.currentNode.addChild(node);
            return this.matchOriginal(input, ttype, follow);
          };

          /**
          *
          * Perform that action before the starting the normal 
          * rules processsing. Generates a parse tree node for every
          * invocation, which represents a rule reference in the grammar.
          *
          */
          this.beforeRuleProcessing = function(type){
            var r = leo.ir.createRuleNode(type);
            if(this.parseTree === undefined) 
              this.parseTree = r;
            else 
              this.currentNode.addChild(r);
            var save = this.currentNode;
            this.currentNode = r;
            return save;
          };

          /**
          *  Delegate application specific error handling to listeners
          *  in the channel 'parserError'.
          *
          */
          this.reportError = function(ex) {
             var tok = this.input.LT(1);
             leo.publish("parserError", tok.getLine(), tok.getCharPositionInLine(), ex.message);
          }
        /*
          this.mismatch = function(input, ttype, follow){
            ;
          }

          this.recoverFromMismatchedSet = function(input, e, follow){
            ;
          }
        */

    }).call(this);

    TurtleParser.superclass.constructor.call(this, input, state);

    this.dfa14 = new TurtleParser.DFA14(this);
    this.dfa26 = new TurtleParser.DFA26(this);

         

    /* @todo only create adaptor if output=AST */
    this.adaptor = new org.antlr.runtime.tree.CommonTreeAdaptor();

};

org.antlr.lang.augmentObject(TurtleParser, {
    EOF: -1,
    WS: 4,
    DOT: 5,
    PREFIX: 6,
    PNAME_NS: 7,
    IRIREF: 8,
    BASE: 9,
    SEMI: 10,
    A: 11,
    COMMA: 12,
    PAREN_ROUND_OPEN: 13,
    PAREN_ROUND_CLOSE: 14,
    BLANK_NODE_LABEL: 15,
    PAREN_BRACKETS_OPEN: 16,
    PAREN_BRACKETS_CLOSE: 17,
    TRUE: 18,
    FALSE: 19,
    INTEGER: 20,
    DECIMAL: 21,
    DOUBLE: 22,
    LANGTAG: 23,
    EYES: 24,
    STRING_LITERAL_QUOTE: 25,
    STRING_LITERAL_SINGLE_QUOTE: 26,
    STRING_LITERAL_LONG_SINGLE_QUOTE: 27,
    STRING_LITERAL_LONG_QUOTE: 28,
    PNAME_LN: 29,
    UCHAR: 30,
    PN_PREFIX: 31,
    PN_LOCAL: 32,
    ECHAR: 33,
    PN_CHARS_U: 34,
    PN_CHARS: 35,
    EXPONENT: 36,
    COMMENT: 37,
    PLX: 38,
    PERCENT: 39,
    PN_LOCAL_ESC: 40,
    HEX: 41,
    PN_CHARS_BASE: 42
});

(function(){
// public class variables
var EOF= -1,
    WS= 4,
    DOT= 5,
    PREFIX= 6,
    PNAME_NS= 7,
    IRIREF= 8,
    BASE= 9,
    SEMI= 10,
    A= 11,
    COMMA= 12,
    PAREN_ROUND_OPEN= 13,
    PAREN_ROUND_CLOSE= 14,
    BLANK_NODE_LABEL= 15,
    PAREN_BRACKETS_OPEN= 16,
    PAREN_BRACKETS_CLOSE= 17,
    TRUE= 18,
    FALSE= 19,
    INTEGER= 20,
    DECIMAL= 21,
    DOUBLE= 22,
    LANGTAG= 23,
    EYES= 24,
    STRING_LITERAL_QUOTE= 25,
    STRING_LITERAL_SINGLE_QUOTE= 26,
    STRING_LITERAL_LONG_SINGLE_QUOTE= 27,
    STRING_LITERAL_LONG_QUOTE= 28,
    PNAME_LN= 29,
    UCHAR= 30,
    PN_PREFIX= 31,
    PN_LOCAL= 32,
    ECHAR= 33,
    PN_CHARS_U= 34,
    PN_CHARS= 35,
    EXPONENT= 36,
    COMMENT= 37,
    PLX= 38,
    PERCENT= 39,
    PN_LOCAL_ESC= 40,
    HEX= 41,
    PN_CHARS_BASE= 42;

// public instance methods/vars
org.antlr.lang.extend(TurtleParser, org.antlr.runtime.Parser, {
        

    getTokenNames: function() { return TurtleParser.tokenNames; },
    getGrammarFileName: function() { return "Turtle.g"; }
});
org.antlr.lang.augmentObject(TurtleParser.prototype, {


    // Turtle.g:168:1: turtleDoc : ( WS )* ( statement )* ;
    // $ANTLR start "turtleDoc"
    turtleDoc: function() {
         var save = this.beforeRuleProcessing("TurtleDoc"); 
        try {
            // Turtle.g:171:4: ( ( WS )* ( statement )* )
            // Turtle.g:171:6: ( WS )* ( statement )*
            // Turtle.g:171:6: ( WS )*
            loop1:
            do {
                var alt1=2;
                var LA1_0 = this.input.LA(1);

                if ( (LA1_0==WS) ) {
                    alt1=1;
                }


                switch (alt1) {
                case 1 :
                    // Turtle.g:171:6: WS
                    this.match(this.input,WS,TurtleParser.FOLLOW_WS_in_turtleDoc61); 


                    break;

                default :
                    break loop1;
                }
            } while (true);

            // Turtle.g:171:10: ( statement )*
            loop2:
            do {
                var alt2=2;
                var LA2_0 = this.input.LA(1);

                if ( ((LA2_0>=PREFIX && LA2_0<=BASE)||LA2_0==PAREN_ROUND_OPEN||(LA2_0>=BLANK_NODE_LABEL && LA2_0<=PAREN_BRACKETS_OPEN)||LA2_0==PNAME_LN) ) {
                    alt2=1;
                }


                switch (alt2) {
                case 1 :
                    // Turtle.g:171:10: statement
                    this.pushFollow(TurtleParser.FOLLOW_statement_in_turtleDoc64);
                    this.statement();

                    this.state._fsp--;



                    break;

                default :
                    break loop2;
                }
            } while (true);




             this.currentNode = save; 
        }
        catch (ex) {

                if(ex instanceof org.antlr.runtime.RecognitionException) {
                  this.reportError(ex);
                  var la = this.input.LA(1);
                  while(la !== DOT && la !== EOF) {
                    this.input.consume();
                    la = this.input.LA(1);
                  }
                  this.input.consume();
                  this.turtleDoc();
                } else {
                  throw ex;
                }
              
        }
        finally {
        }
        return ;
    },


    // Turtle.g:188:1: statement : ( directive (ws1= WS )* dot= DOT (ws2= WS )* | triples ( WS )* DOT ( WS )* );
    // $ANTLR start "statement"
    statement: function() {
        var ws1 = null;
        var dot = null;
        var ws2 = null;

         var save = this.beforeRuleProcessing("Statement"); 
        try {
            // Turtle.g:191:4: ( directive (ws1= WS )* dot= DOT (ws2= WS )* | triples ( WS )* DOT ( WS )* )
            var alt7=2;
            var LA7_0 = this.input.LA(1);

            if ( (LA7_0==PREFIX||LA7_0==BASE) ) {
                alt7=1;
            }
            else if ( ((LA7_0>=PNAME_NS && LA7_0<=IRIREF)||LA7_0==PAREN_ROUND_OPEN||(LA7_0>=BLANK_NODE_LABEL && LA7_0<=PAREN_BRACKETS_OPEN)||LA7_0==PNAME_LN) ) {
                alt7=2;
            }
            else {
                var nvae =
                    new org.antlr.runtime.NoViableAltException("", 7, 0, this.input);

                throw nvae;
            }
            switch (alt7) {
                case 1 :
                    // Turtle.g:191:6: directive (ws1= WS )* dot= DOT (ws2= WS )*
                    this.pushFollow(TurtleParser.FOLLOW_directive_in_statement97);
                    this.directive();

                    this.state._fsp--;

                    // Turtle.g:191:19: (ws1= WS )*
                    loop3:
                    do {
                        var alt3=2;
                        var LA3_0 = this.input.LA(1);

                        if ( (LA3_0==WS) ) {
                            alt3=1;
                        }


                        switch (alt3) {
                        case 1 :
                            // Turtle.g:191:19: ws1= WS
                            ws1=this.match(this.input,WS,TurtleParser.FOLLOW_WS_in_statement101); 


                            break;

                        default :
                            break loop3;
                        }
                    } while (true);

                    dot=this.match(this.input,DOT,TurtleParser.FOLLOW_DOT_in_statement106); 
                    // Turtle.g:191:35: (ws2= WS )*
                    loop4:
                    do {
                        var alt4=2;
                        var LA4_0 = this.input.LA(1);

                        if ( (LA4_0==WS) ) {
                            alt4=1;
                        }


                        switch (alt4) {
                        case 1 :
                            // Turtle.g:191:35: ws2= WS
                            ws2=this.match(this.input,WS,TurtleParser.FOLLOW_WS_in_statement110); 


                            break;

                        default :
                            break loop4;
                        }
                    } while (true);



                    break;
                case 2 :
                    // Turtle.g:192:6: triples ( WS )* DOT ( WS )*
                    this.pushFollow(TurtleParser.FOLLOW_triples_in_statement118);
                    this.triples();

                    this.state._fsp--;

                    // Turtle.g:192:14: ( WS )*
                    loop5:
                    do {
                        var alt5=2;
                        var LA5_0 = this.input.LA(1);

                        if ( (LA5_0==WS) ) {
                            alt5=1;
                        }


                        switch (alt5) {
                        case 1 :
                            // Turtle.g:192:14: WS
                            this.match(this.input,WS,TurtleParser.FOLLOW_WS_in_statement120); 


                            break;

                        default :
                            break loop5;
                        }
                    } while (true);

                    this.match(this.input,DOT,TurtleParser.FOLLOW_DOT_in_statement123); 
                    // Turtle.g:192:22: ( WS )*
                    loop6:
                    do {
                        var alt6=2;
                        var LA6_0 = this.input.LA(1);

                        if ( (LA6_0==WS) ) {
                            alt6=1;
                        }


                        switch (alt6) {
                        case 1 :
                            // Turtle.g:192:22: WS
                            this.match(this.input,WS,TurtleParser.FOLLOW_WS_in_statement125); 


                            break;

                        default :
                            break loop6;
                        }
                    } while (true);



                    break;

            }
             this.currentNode = save; 
        }

          catch(ex) {
            throw ex;
          }
        finally {
        }
        return ;
    },


    // Turtle.g:195:1: directive : ( prefixID | base );
    // $ANTLR start "directive"
    directive: function() {
         var save = this.beforeRuleProcessing("Directive"); 
        try {
            // Turtle.g:198:4: ( prefixID | base )
            var alt8=2;
            var LA8_0 = this.input.LA(1);

            if ( (LA8_0==PREFIX) ) {
                alt8=1;
            }
            else if ( (LA8_0==BASE) ) {
                alt8=2;
            }
            else {
                var nvae =
                    new org.antlr.runtime.NoViableAltException("", 8, 0, this.input);

                throw nvae;
            }
            switch (alt8) {
                case 1 :
                    // Turtle.g:198:6: prefixID
                    this.pushFollow(TurtleParser.FOLLOW_prefixID_in_directive151);
                    this.prefixID();

                    this.state._fsp--;



                    break;
                case 2 :
                    // Turtle.g:199:6: base
                    this.pushFollow(TurtleParser.FOLLOW_base_in_directive158);
                    this.base();

                    this.state._fsp--;



                    break;

            }
             this.currentNode = save; 
        }

          catch(ex) {
            throw ex;
          }
        finally {
        }
        return ;
    },


    // Turtle.g:202:1: prefixID : prefix= PREFIX (ws1= WS )+ PNAME_NS (ws2= WS )* IRIREF ;
    // $ANTLR start "prefixID"
    prefixID: function() {
        var prefix = null;
        var ws1 = null;
        var ws2 = null;
        var PNAME_NS1 = null;
        var IRIREF2 = null;

         var save = this.beforeRuleProcessing("PrefixID"); 
        try {
            // Turtle.g:205:4: (prefix= PREFIX (ws1= WS )+ PNAME_NS (ws2= WS )* IRIREF )
            // Turtle.g:205:6: prefix= PREFIX (ws1= WS )+ PNAME_NS (ws2= WS )* IRIREF
            prefix=this.match(this.input,PREFIX,TurtleParser.FOLLOW_PREFIX_in_prefixID185); 
            // Turtle.g:205:23: (ws1= WS )+
            var cnt9=0;
            loop9:
            do {
                var alt9=2;
                var LA9_0 = this.input.LA(1);

                if ( (LA9_0==WS) ) {
                    alt9=1;
                }


                switch (alt9) {
                case 1 :
                    // Turtle.g:205:23: ws1= WS
                    ws1=this.match(this.input,WS,TurtleParser.FOLLOW_WS_in_prefixID189); 


                    break;

                default :
                    if ( cnt9 >= 1 ) {
                        break loop9;
                    }
                        var eee = new org.antlr.runtime.EarlyExitException(9, this.input);
                        throw eee;
                }
                cnt9++;
            } while (true);

            PNAME_NS1=this.match(this.input,PNAME_NS,TurtleParser.FOLLOW_PNAME_NS_in_prefixID192); 
            // Turtle.g:205:40: (ws2= WS )*
            loop10:
            do {
                var alt10=2;
                var LA10_0 = this.input.LA(1);

                if ( (LA10_0==WS) ) {
                    alt10=1;
                }


                switch (alt10) {
                case 1 :
                    // Turtle.g:205:40: ws2= WS
                    ws2=this.match(this.input,WS,TurtleParser.FOLLOW_WS_in_prefixID196); 


                    break;

                default :
                    break loop10;
                }
            } while (true);

            IRIREF2=this.match(this.input,IRIREF,TurtleParser.FOLLOW_IRIREF_in_prefixID199); 

                   this.loadVocabulary((PNAME_NS1?PNAME_NS1.getText():null), (IRIREF2?IRIREF2.getText():null));
                 



             this.currentNode = save; 
        }

          catch(ex) {
            throw ex;
          }
        finally {
        }
        return ;
    },


    // Turtle.g:210:1: base : base1= BASE (ws= WS )* iriref= IRIREF ;
    // $ANTLR start "base"
    base: function() {
        var base1 = null;
        var ws = null;
        var iriref = null;

         var save = this.beforeRuleProcessing("Base"); 
        try {
            // Turtle.g:213:4: (base1= BASE (ws= WS )* iriref= IRIREF )
            // Turtle.g:213:6: base1= BASE (ws= WS )* iriref= IRIREF
            base1=this.match(this.input,BASE,TurtleParser.FOLLOW_BASE_in_base228); 
            // Turtle.g:213:19: (ws= WS )*
            loop11:
            do {
                var alt11=2;
                var LA11_0 = this.input.LA(1);

                if ( (LA11_0==WS) ) {
                    alt11=1;
                }


                switch (alt11) {
                case 1 :
                    // Turtle.g:213:19: ws= WS
                    ws=this.match(this.input,WS,TurtleParser.FOLLOW_WS_in_base232); 


                    break;

                default :
                    break loop11;
                }
            } while (true);

            iriref=this.match(this.input,IRIREF,TurtleParser.FOLLOW_IRIREF_in_base237); 



             this.currentNode = save; 
        }

          catch(ex) {
            throw ex;
          }
        finally {
        }
        return ;
    },


    // Turtle.g:216:1: triples : ( subject ( WS )+ predicateObjectList | blankNodePropertyList ( predicateObjectList )? );
    // $ANTLR start "triples"
    triples: function() {
         var save = this.beforeRuleProcessing("Triples"); 
        try {
            // Turtle.g:219:5: ( subject ( WS )+ predicateObjectList | blankNodePropertyList ( predicateObjectList )? )
            var alt14=2;
            alt14 = this.dfa14.predict(this.input);
            switch (alt14) {
                case 1 :
                    // Turtle.g:219:7: subject ( WS )+ predicateObjectList
                    this.pushFollow(TurtleParser.FOLLOW_subject_in_triples263);
                    this.subject();

                    this.state._fsp--;

                    // Turtle.g:219:15: ( WS )+
                    var cnt12=0;
                    loop12:
                    do {
                        var alt12=2;
                        var LA12_0 = this.input.LA(1);

                        if ( (LA12_0==WS) ) {
                            alt12=1;
                        }


                        switch (alt12) {
                        case 1 :
                            // Turtle.g:219:15: WS
                            this.match(this.input,WS,TurtleParser.FOLLOW_WS_in_triples265); 


                            break;

                        default :
                            if ( cnt12 >= 1 ) {
                                break loop12;
                            }
                                var eee = new org.antlr.runtime.EarlyExitException(12, this.input);
                                throw eee;
                        }
                        cnt12++;
                    } while (true);

                    this.pushFollow(TurtleParser.FOLLOW_predicateObjectList_in_triples268);
                    this.predicateObjectList();

                    this.state._fsp--;



                    break;
                case 2 :
                    // Turtle.g:220:7: blankNodePropertyList ( predicateObjectList )?
                    this.pushFollow(TurtleParser.FOLLOW_blankNodePropertyList_in_triples276);
                    this.blankNodePropertyList();

                    this.state._fsp--;

                    // Turtle.g:220:29: ( predicateObjectList )?
                    var alt13=2;
                    var LA13_0 = this.input.LA(1);

                    if ( ((LA13_0>=PNAME_NS && LA13_0<=IRIREF)||LA13_0==A||LA13_0==PNAME_LN) ) {
                        alt13=1;
                    }
                    switch (alt13) {
                        case 1 :
                            // Turtle.g:220:29: predicateObjectList
                            this.pushFollow(TurtleParser.FOLLOW_predicateObjectList_in_triples278);
                            this.predicateObjectList();

                            this.state._fsp--;



                            break;

                    }



                    break;

            }
             this.currentNode = save; 
        }

          catch(ex) {
            throw ex;
          }
        finally {
        }
        return ;
    },


    // Turtle.g:223:1: subject : ( iri | blank );
    // $ANTLR start "subject"
    subject: function() {
         var save = this.beforeRuleProcessing("Subject"); 
        try {
            // Turtle.g:226:4: ( iri | blank )
            var alt15=2;
            var LA15_0 = this.input.LA(1);

            if ( ((LA15_0>=PNAME_NS && LA15_0<=IRIREF)||LA15_0==PNAME_LN) ) {
                alt15=1;
            }
            else if ( (LA15_0==PAREN_ROUND_OPEN||(LA15_0>=BLANK_NODE_LABEL && LA15_0<=PAREN_BRACKETS_OPEN)) ) {
                alt15=2;
            }
            else {
                var nvae =
                    new org.antlr.runtime.NoViableAltException("", 15, 0, this.input);

                throw nvae;
            }
            switch (alt15) {
                case 1 :
                    // Turtle.g:226:6: iri
                    this.pushFollow(TurtleParser.FOLLOW_iri_in_subject305);
                    this.iri();

                    this.state._fsp--;



                    break;
                case 2 :
                    // Turtle.g:226:10: blank
                    this.pushFollow(TurtleParser.FOLLOW_blank_in_subject307);
                    this.blank();

                    this.state._fsp--;



                    break;

            }
             this.currentNode = save; 
        }

          catch(ex) {
            throw ex;
          }
        finally {
        }
        return ;
    },


    // Turtle.g:230:1: predicateObjectList : verb ( WS )+ objectList ( WS )* ( SEMI ( WS )* ( predicateObjectList )? )* ;
    // $ANTLR start "predicateObjectList"
    predicateObjectList: function() {
         var save = this.beforeRuleProcessing("PredicateObjectList"); 
        try {
            // Turtle.g:233:6: ( verb ( WS )+ objectList ( WS )* ( SEMI ( WS )* ( predicateObjectList )? )* )
            // Turtle.g:233:8: verb ( WS )+ objectList ( WS )* ( SEMI ( WS )* ( predicateObjectList )? )*
            this.pushFollow(TurtleParser.FOLLOW_verb_in_predicateObjectList335);
            this.verb();

            this.state._fsp--;

            // Turtle.g:233:13: ( WS )+
            var cnt16=0;
            loop16:
            do {
                var alt16=2;
                var LA16_0 = this.input.LA(1);
